# RAG-Advanced

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.bge-m3.yml  docker-compose.yml  example.env  pyproject.toml
.cursor/rules/: docs.mdc
PRD/: .gitignore  INITIAL.md  claude_feedback_for plan v3_jan21_2026.txt  claude_feedback_for plan v4_jan21_2026.txt  new-taskmaster-chat.sh
PRD/.cursor/rules/: dev_workflow.mdc  prd_completeness.mdc  task_master_workflow.mdc
PRD/.taskmaster/: config.json
PRD/.taskmaster/docs/: README_json_to_csv.md  prd.txt
PRD/.taskmaster/reports/: task-complexity-report.csv  task-complexity-report.json
PRD/.taskmaster/scripts/: json_to_csv.py
PRD/.taskmaster/tasks/: tasks.csv  tasks.json
PRD/.taskmaster/templates/: example_prd_rpg_completeness.md
api/: README.md  __init__.py  auth.py  main.py  rate_limiter.py
api/routes/: __init__.py  benchmarks.py  evaluation.py  generate.py  strategies.py
config/: README.md  __init__.py  pricing.json
datasets/: README.md
datasets/sample/: basic_queries.json
docs/: ALL_RAG_STRATEGIES_7_VS_RAG_ADVANCED.md  ALL_RAG_STRATEGIES_VS_RAG_ADVANCED_COMPARISON.md  API.md  EVALUATION.md  LOCAL_GITHUB_DEVELOPMENT.md  MIGRATION.md  MIGRATION_AND_TASKMASTER_NOTES.md  QUICKSTART_FINDINGS.md  README.md  README_API.md  README_MIGRATION.md  README_config.md  README_datasets.md  README_development.md  README_development_workflow.md  README_documents.md  README_embeddings_and_local_dev.md  README_evaluation.md  README_evaluation_pipeline.md  README_generation.md  README_ingestion.md  README_orchestration.md  README_scripts.md  README_terminology.md  README_tests.md  add_rag_generator_with_langchain_b2fb5208.plan.md  changes_integration_eval_chain_examples.csv  evaluation_pipeline_implementation_summary.csv  extra_corpus_gold_coverage_implementation_summary.csv  implementation_summary_rag_generator.csv  ingestion_implementation_summary.csv  pipeline_fast_test_implementation_summary.csv  rag_generation_evaluation_ragas_implementation_summary.csv  real_chaining_document_passing_4dec27ea.plan.md  semantic_chunking_test_summary.csv  sync_rag_advanced_to_github_implementation.csv
eval_out/: benchmark_report.md  benchmark_report_100Q_4S_allcorpus.md  benchmark_results_detailed.json  benchmark_results_detailed_2Q_8S_20corpus.json  generation_metrics.json  gold_dataset_canonical.json
evaluation/: README.md  __init__.py  benchmarks.py  corpus_ingest.py  datasets.py  db_persistence.py  ground_truth_llm.py  html_reports.py  metrics.py  ragas_eval.py  reports.py  schema_extension.sql
evaluation/config/: bioasq_v1.json
evaluation/loaders/: __init__.py  xlsx_config.py  xlsx_loader.py
generation/: README.md  __init__.py  chain.py
orchestration/: README.md  __init__.py  chain_executor.py  comparison.py  cost_tracker.py  errors.py  executor.py  models.py  pricing.py  registry.py  resource_manager.py
scripts/: README.md  check_generate_endpoint.sh  run_evaluation_pipeline.py  run_schema.py
strategies/: __init__.py
strategies/agents/: __init__.py  agentic.py  multi_query.py  query_expansion.py  query_utils.py  reranking.py  self_reflective.py  standard.py
strategies/docs/: README.md
strategies/examples/: README.md
strategies/ingestion/: README.md  __init__.py  chunker.py  document_reader.py  embedder.py  ingest.py  models.py
strategies/utils/: __init__.py  embedder.py  embedding_cache.py  result_cache.py  schema.sql  schema_1024.sql
tests/: README.md  __init__.py  conftest.py
tests/test_api/: test_auth.py  test_rate_limiter.py
tests/test_api/test_routes/: test_benchmarks.py  test_evaluation.py  test_generate.py  test_strategies.py
tests/test_evaluation/: test_benchmarks.py  test_corpus_ingest.py  test_datasets.py  test_ground_truth_llm.py  test_html_reports.py  test_loaders_xlsx.py  test_metrics.py  test_pipeline_helpers.py  test_pipeline_integration.py  test_ragas_eval.py  test_reports.py
tests/test_generation/: __init__.py  test_chain.py
tests/test_orchestration/: test_chain_context.py  test_chain_executor.py  test_comparison.py  test_cost_tracking.py  test_executor.py  test_registry.py  test_resource_manager.py
tests/test_scripts/: test_run_schema.py
tests/test_strategies/: test_ingestion.py  test_reranking.py
tests/test_strategies/test_utils/: test_embedder.py  test_embedding_cache.py  test_result_cache.py
